--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -10,6 +10,7 @@ body {
   background: lightgray;
   font-family: Besley, serif;
   display: flex;
+  justify-content: space-between;
 }
 
 .header {
@@ -22,8 +23,8 @@ body {
   background: rebeccapurple;
   box-shadow: inset 2px 2px 4px rgba(0,0,0,.5);
   border-radius: 50%;
-  width: 48px;
-  height: 48px;
+  width: 38px;
+  height: 38px;
   flex-shrink: 0;
 }
 
@@ -54,12 +55,20 @@ a {
 ul {
   list-style-type: none;
   display: flex;
+  gap: 20px;
 }
 
 .leftStuff,
 .rightStuff{
   display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
+  align-items: center;
+  gap: 15px;
+}
+
+.notifications {
+  height: 25px;
+}
+
+.profile-image {
 }
 
