--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,10 +1,17 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 img {
   width: 100px;
   height: 100px;
+}
+
+.text {
+ text-align: center;
 }
 
 .title {
@@ -23,4 +30,23 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.catalog {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+  flex-wrap: nowrap;
+}
+
+.items {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 8px;
+  width: 150px;
+  height: 150px;
+  border: 2px solid black;
+  border-radius: 10%;
 }
